2003-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* icons/spinner.gif: New file (without LZW compression).
	* icons30/spinner.gif: Ditto.

	* Makefile.in (install-icons, install-icons30): Also install gifs.

	* w3m-xmas.el (w3m-make-spinner-image): Use the spinner.gif file.

	* w3m-e21.el (w3m-tab-line-format): New variable (see doc-string).
	(w3m-tab-line): Use it; use a timer to suppress this function
	running too frequently.

2003-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-spinner-image): New variable.
	(w3m-make-spinner-image): New function.

	* w3m.el (w3m-buffer-setup): Call `w3m-make-spinner-image', show a
	spinner in the modeline under XEmacs.

2003-09-24  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-put-property): Don't call intern if it is
	not a string.
	(w3m-form-get-property): Ditto.
	(w3m-form-put): Added argument ID.
	(w3m-form-get): Changed argument from NAME to ID.
	(w3m-form-make-form-data): Changed process to get NAME and VALUE.
	(w3m-form-resume): Follow the API change in w3m-form-put and
	w3m-form-get.
	(w3m-fontify-textareas): Ditto.
	(w3m-form-parse-and-fontify): Ditto.
	(w3m-form-input): Ditto.
	(w3m-form-input-password): Ditto.
	(w3m-form-input-checkbox): Ditto.
	(w3m-form-input-radio): Ditto.
	(w3m-form-input-file): Ditto.
	(w3m-form-input-textarea-set): Ditto.
	(w3m-form-textarea-info): Ditto.
	(w3m-form-input-select): Ditto.
	(w3m-form-submit): Ditto.
	(w3m-form-real-reset): Follow the structure change.
	(w3m-form-input-select-id): New buffer local variable.
	(w3m-form-input-select-set): Use it.
	(w3m-form-field-parse): New inline function.
	(w3m-form-parse-and-fontify): Put id for selectinfo.
	(w3m-form-resume): Fixed regexp.
	(w3m-form-input-textarea): Fixed line number.
	(w3m-fontify-textareas): Put w3m-form-id property.
	(w3m-form-parse-and-fontify): Store id to the textareainfo.

2003-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-retrieve): Redisplay Emacs frame;